elasticsearch/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: elasticsearch-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /elasticsearch
