elasticsearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: elasticsearch-elasticsearch-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: k3s.local
      http:
        paths:
          - path: /elasticsearch
            pathType: Prefix
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
